# realtime-stt

./: .env  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  sap_config.yml
.claude/commands/: test-stt.md
demo/: index.html
docs/: pipeline.md
server/: Dockerfile  cli.py  config.py  main.py  requirements.txt
server/core/: audio_pipeline.py  session.py  transcriber.py  vad.py
server/models/: messages.py  session_state.py
server/utils/: audio.py
tests/: conftest.py  test_audio_format.py  test_connection_limits.py  test_health.py  test_limits.py  test_session_timeout.py  test_transcription.py  test_vad.py  test_websocket_lifecycle.py
