[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "realtime-stt"
version = "0.1.0"
requires-python = ">=3.11"

[project.scripts]
sfm = "cli:main"

[tool.setuptools]
package-dir = {"" = "server"}

[tool.setuptools.packages.find]
where = ["server"]
